--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "core-js": "^3.8.3",
     "pinia": "^2.2.2",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.3",
     "vuetify": "^3.7.0-beta.1",
     "webfontloader": "^1.0.0"
